--- a/Gaussian Fitting Slider.ipynb
+++ b/Gaussian Fitting Slider.ipynb
@@ -406,10 +406,10 @@
       "Code is 50.0% complete\n",
       "Code is 75.0% complete\n",
       "Code is 100.0% complete\n",
-      "No fails: 4\n",
-      "0.1% trails failed to fit a gaussian\n",
+      "No fails: 1\n",
+      "0.025% trails failed to fit a gaussian\n",
       "\n",
-      "average v_max 3117.555651415573 which is 17.55565141557281 away from the true value of 3100 \n"
+      "average v_max 3116.9068684047743 which is 16.906868404774286 away from the true value of 3100 \n"
      ]
     }
    ],
@@ -507,40 +507,81 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (251.16415311802632, 5.310258678771886e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (3008.4535229857956, 2.606750541644942e-06)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (356.53066991153776, 3.0892498159573734e-07)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (1114.035687199636, 5.439839651818004e-06)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (169.93764719994465, 2.5158772754119847e-07)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (63.85087204687396, 3.445725102232178e-07)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n",
+      "Power under Gaussian (1747.4335454893526, 1.940040966416645e-11)\n",
+      "Power under background (5287.2198160748085, 6.817053097420232e-10)\n"
+     ]
+    }
+   ],
    "source": [
+    "#   This section of code plots the binned data and fitted background on a figure with a slider \n",
+    "# function. This slider function allows gaussian parameters to be altered and is intended \n",
+    "# to be used as a by eye fitting technique. Using the reset button means the gaussian can be \n",
+    "# fitted multiple times in a minimally biased way (due to slider values being invisible). Each\n",
+    "# fit can be integrated. By integrating several times, average area beneath the gaussian curve \n",
+    "# can be found resulting in a power ratio with error.\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.widgets import Slider, Button, RadioButtons\n",
     "\n",
-    "%matplotlib qt \n",
+    "%matplotlib qt #opens an interactive window\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "plt.subplots_adjust(left=0.25, bottom=0.25)\n",
-    "f = np.arange(0.0, 6000, 1)\n",
-    "a0 = 2\n",
+    "f = np.arange(0.0, 6000, 1) #x-axis\n",
+    "a0 = 2  #starting conditons for amplitude, centre and width\n",
     "v0= 3000\n",
     "sig0 = 50\n",
     "delta_f = 5.0\n",
-    "s = a0*(np.exp(-0.5*((f-v0)**2/sig0**2)))\n",
+    "s = a0*(np.exp(-0.5*((f-v0)**2/sig0**2))) #gaussian equation\n",
     "l, = plt.plot(f, s, lw=2)\n",
-    "plt.plot(x_vals,y_vals, label='Binned Sun Data')\n",
-    "plt.plot(x, granulation)\n",
+    "plt.plot(x_vals,y_vals, label='Binned Sun Data') #plotting binned data, struggling to get new data here.\n",
+    "plt.plot(x, granulation) #plotting the background curve\n",
     "\n",
     "ax.margins(x=0)\n",
     "axcolor = 'lightgoldenrodyellow'\n",
-    "axcent = plt.axes([0.25, 0.05, 0.65, 0.03], facecolor=axcolor)\n",
+    "axcent = plt.axes([0.25, 0.05, 0.65, 0.03], facecolor=axcolor) #positions of the sliders\n",
     "axamp = plt.axes([0.25, 0.1, 0.65, 0.03], facecolor=axcolor)\n",
     "axsig = plt.axes([0.25, 0.15, 0.65, 0.03], facecolor=axcolor)\n",
     "\n",
-    "scentre = Slider(axcent, 'nu{max}', 0.1, 4000, valinit=v0, valstep=delta_f)\n",
-    "scentre.valtext.set_visible(False)\n",
+    "scentre = Slider(axcent, 'nu{max}', 0.1, 4000, valinit=v0, valstep=delta_f) #parameters for sliders\n",
+    "scentre.valtext.set_visible(False) #removing the values so that fitting isn't as biased\n",
     "samp = Slider(axamp, 'Amp', 0.1, 2, valinit=a0)\n",
     "samp.valtext.set_visible(False)\n",
     "ssig = Slider(axsig, 'Sigma', 0.1, 1000, valinit=sig0, valstep= delta_f)\n",
     "ssig.valtext.set_visible(False)\n",
     "\n",
-    "def update(val):\n",
+    "def update(val): #function to update the amp, cent and width values as the slider is moved\n",
     "    amp = samp.val\n",
     "    cent = scentre.val\n",
     "    sig = ssig.val\n",
@@ -550,13 +591,13 @@
     "samp.on_changed(update)\n",
     "ssig.on_changed(update)\n",
     "\n",
-    "integrateax = plt.axes([0.2, 0.005, 0.1, 0.04])\n",
-    "button1 = Button(integrateax, 'Integrate', color=axcolor, hovercolor='0.975')\n",
+    "integrateax = plt.axes([0.2, 0.005, 0.1, 0.04]) #position of integrate button\n",
+    "button1 = Button(integrateax, 'Integrate', color=axcolor, hovercolor='0.975') #creation of integrate button\n",
     "\n",
-    "def integrand_b(x, a, b):\n",
+    "def integrand_b(x, a, b): #integrate under background curve\n",
     "    I = a/(1+(2*np.pi*x*b)**4)\n",
     "    return I\n",
-    "a = best[0]\n",
+    "a = best[0] #values for A and tau\n",
     "b = best[1]\n",
     "Int_background = quad(integrand_b, 0, 6000, args=(a,b))\n",
     "\n",
@@ -568,8 +609,8 @@
     "gausserr = []\n",
     "background = []\n",
     "backgrounderr = []\n",
-    "def integrate(event):\n",
-    "    a = samp.val\n",
+    "def integrate(event): #defining what happens when 'integrate' button is clicked\n",
+    "    a = samp.val #values for a, b and c in integrand_g\n",
     "    b = scentre.val\n",
     "    c = ssig.val\n",
     "    Int_gaus = quad(integrand_g, 0, 6000, args=(a,b,c))\n",
@@ -579,23 +620,22 @@
     "    gausserr.append(Int_gaus[1])\n",
     "    background.append(Int_background[0])\n",
     "    backgrounderr.append(Int_background[1])\n",
-    "    \n",
     "button1.on_clicked(integrate)\n",
     "\n",
-    "resetax = plt.axes([0.8, 0.005, 0.1, 0.04])\n",
-    "button2 = Button(resetax, 'Reset', color=axcolor, hovercolor='0.975')\n",
-    "def reset(event):\n",
+    "resetax = plt.axes([0.8, 0.005, 0.1, 0.04]) #position of reset button\n",
+    "button2 = Button(resetax, 'Reset', color=axcolor, hovercolor='0.975') #creating reset button\n",
+    "def reset(event): #defining what happens when 'integrate' button is clicked\n",
     "    scentre.reset()\n",
     "    samp.reset()\n",
     "    ssig.reset()\n",
     "button2.on_clicked(reset)\n",
     "\n",
-    "rax = plt.axes([0.025, 0.5, 0.15, 0.15], facecolor=axcolor)\n",
-    "radio = RadioButtons(rax, ('cyan', 'magenta', 'yellow'), active=0)\n",
+    "rax = plt.axes([0.025, 0.5, 0.15, 0.15], facecolor=axcolor) #position of colour label\n",
+    "radio = RadioButtons(rax, ('cyan', 'magenta', 'yellow'), active=0) #creation of colour label\n",
     "def colorfunc(label):\n",
     "    l.set_color(label)\n",
     "    fig.canvas.draw_idle()\n",
-    "radio.on_clicked(colorfunc)\n",
+    "radio.on_clicked(colorfunc) #changes colour accordingly\n",
     "\n",
     "\n",
     "plt.show()\n",
@@ -612,20 +652,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratio of Power: nan\n",
-      "Error on Ratio of Power: nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3257: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/anaconda/lib/python3.6/site-packages/numpy/core/_methods.py:161: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  \n"
+      "Ratio of Power: 0.1195683074186498\n",
+      "Error on Ratio of Power: 8.80951429094642e-11\n"
      ]
     }
    ],
